; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_image.c_make_random_image.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_image.c_make_random_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { double* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double* @make_random_image(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_4__, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = call double* @make_empty_image(i32 %9, i32 %10, i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store double* %12, double** %13, align 8
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* %5, align 4
  %16 = mul nsw i32 %14, %15
  %17 = load i32, i32* %7, align 4
  %18 = mul nsw i32 %16, %17
  %19 = call double* @calloc(i32 %18, i32 4)
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  store double* %19, double** %20, align 8
  store i32 0, i32* %8, align 4
  br label %21

21:                                               ; preds = %38, %3
  %22 = load i32, i32* %8, align 4
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %6, align 4
  %25 = mul nsw i32 %23, %24
  %26 = load i32, i32* %7, align 4
  %27 = mul nsw i32 %25, %26
  %28 = icmp slt i32 %22, %27
  br i1 %28, label %29, label %41

29:                                               ; preds = %21
  %30 = call double (...) @rand_normal()
  %31 = fmul double %30, 2.500000e-01
  %32 = fadd double %31, 5.000000e-01
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %34 = load double*, double** %33, align 8
  %35 = load i32, i32* %8, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds double, double* %34, i64 %36
  store double %32, double* %37, align 8
  br label %38

38:                                               ; preds = %29
  %39 = load i32, i32* %8, align 4
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %8, align 4
  br label %21

41:                                               ; preds = %21
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %43 = load double*, double** %42, align 8
  ret double* %43
}

declare dso_local double* @make_empty_image(i32, i32, i32) #1

declare dso_local double* @calloc(i32, i32) #1

declare dso_local double @rand_normal(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
